[package]
name = "spotme"
version = "0.1.0"
authors = ["spicheaubin <spicheaubin@devolutions.net>"]
edition = "2018"

[dependencies]
saphir = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5.4"
csv = "1.0.5"
log = "0.4.6"
lazy_static = "1.2.0"
bson = "0.13"
mongodb = { version = "0.3.12", features = ["ssl"] }
r2d2 = "0.8"